# vne

./: ._.vscode  .gitignore  .pre-commit-config.yaml  .scivision-config.yaml  README.md  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: checks.yml  test.yml
vne/: __init__.py  base.py  dataset.py  features.py  metrics.py  model.py  read_config.py  shapes.py  simulate.py  vae.py  vis.py
vne/_tests/: test_simulate.py
vne/decoders/: __init__.py  base.py  broadcast.py  conv.py  differentiable.py  spatial.py
vne/encoders/: __init__.py  base.py  conv.py
vne/special/: affinity_mat_create.py  alphanumeric_simulator.py  ctf.py  pdb.py  protein_AM.py  shapenet.py  shrec.py  voxels.py
vne/utils/: __init__.py  anneal.py  napari.py  utils.py
