[metadata]
name = vne
version = 0.0.1
description = von Neumman's Elephant
author = Alan R. Lowe
author_email = alowe@turing.ac.uk
url = https://github.com/quantumjot/vne
license = BSD 3-Clause
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
  numpy
  scipy
  pillow
  scikit-image
  scikit-learn
  torch
  requests

[options.extras_require]
dev =
  dscribe
  ase
  pytest
